# jengabot

./: .gitignore  IMG_4257.HEIC  JengaBot_Pitch.pptx  ONBOARDING.md  PITCH.md  README.md  RESEARCH.md  RESOURCES.md  SETUP.md  calibration.txt  index.html  poses.txt
apps/bc_trainer/: train_bc.py
apps/bc_trainer/models/: bc_20260524_132821.pt  bc_20260524_132821_meta.json
apps/dataset_builder/: build_lerobot.py
apps/depth_sensor/: jenga_detect.py  orbbec_probe.py
apps/replay_ui/: Cargo.toml
apps/replay_ui/src/: index.html  main.rs
apps/smolvla_trainer/: README.md  build_v3_dataset.py  loss_curve.txt  train_vision_bc.py
apps/smolvla_trainer/models/: vision_bc_20260524_135058.pt  vision_bc_20260524_135058_meta.json
apps/smolvla_trainer/runs/smolvla_real/checkpoints/000200/pretrained_model/: config.json  model.safetensors  policy_preprocessor.json  policy_preprocessor_step_5_normalizer_processor.safetensors  train_config.json
apps/soarm_leader/: soarm_leader.py
examples/piper-sdk-rs-patches/: README.md  exit_teach_mode.rs  feedback_check.rs  firmware-1.8-3-id-shift.patch  firmware-1.8-3-yolo.patch  follower_play.rs  frame_scan.rs  gripper_test.rs  joint_sweep.rs  leader_stream.rs  macos-no-reset-on-start.patch  play_poses.rs  position_control_demo.rs  record_pose.rs
