[package]
name = "replay_ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "replay_ui"
path = "src/main.rs"

[dependencies]
piper-sdk = { path = "../../piper-sdk-rs-v1.8-2/crates/piper-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = "3"
